fix(payment): PAYPAL-2011 fixed the issue with paypal buttons z-index and added extra vertical space between buttons in customer step (#1217)

--- a/packages/core/src/scss/components/checkout/checkoutRemote/_checkoutRemote.scss
+++ b/packages/core/src/scss/components/checkout/checkoutRemote/_checkoutRemote.scss
@@ -7,9 +7,12 @@
     flex-wrap: wrap;
     margin-left: -(spacing("third"));
     margin-right: -(spacing("third"));
+    margin-top: -(spacing("single"));
 
     > div {
         margin-right: spacing("single");
+        margin-top: spacing("single");
+        z-index: zIndex("low");
     }
 
     > .AmazonPayContainer {
